# smartSpider

./: .env.example  .gitignore  README.md  REALISE.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.yaml
docs/: api.md
scripts/: run_dev.sh
smart_spider/: __init__.py  config.yaml  main.py  main_api.py  settings.py
smart_spider/api/: proxy_routes.py  routes.py
smart_spider/core/: cache.py  cookie_manager.py  crawler.py  proxy_manager.py  service.py  storage.py  task_manager.py
smart_spider/models/: cookie.py  task.py  user.py
smart_spider/utils/: logger.py
tests/: __init__.py  test_api.py  test_basic.py  test_utils.py
